crates/rome_cli/tests/snapshots/main_format/applies_custom_configuration_over_config_file_issue_3175_v2.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `rome.json`

```json
{
  "javascript": {
    "formatter": {
        "quoteStyle": "single"
    }
  }
}
```

## `file.js`

```js
function f() {
  return 'hey';
}

```

# Emitted Messages


