crates/rome_cli/tests/snapshots/main_format/does_not_format_ignored_files.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `rome.json`

```json
{
  "formatter": {
    "enabled": true,
    "ignore": ["test.js"]
  }
}

```

## `test.js`

```js
  statement(  )  
```

# Emitted Messages


