crates/rome_cli/tests/snapshots/main_format/format_stdin_successfully.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
# Input messages

```block
function f() {return{}}
```

# Emitted Messages

```block
function f() {
	return {};
}

```


