crates/rome_cli/tests/snapshots/main_format/format_stdin_with_errors.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
# Termination Message

```block
missing argument 'stdin'. Type 'rome format --help' for more information.
```


