crates/rome_cli/tests/snapshots/main_format/formatter_print.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `format.js`

```js
  statement(  )  
```

# Emitted Messages

```block
format.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Formatter would have printed the following content:
  
      | @@ -1 +1 @@
  0   | -   statement(  )
    0 | + statement();
  

```


