crates/rome_cli/tests/snapshots/main_format/indent_size_parse_errors_negative.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
# Termination Message

```block
failed to parse argument '--indent-size': failed to parse '-1': invalid digit found in string
```


